// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v1;

import "com/digitalasset/canton/protocol/v0/sequencing.proto";
import "com/digitalasset/canton/protocol/v0/topology.proto";

message TopologyStateUpdate {
    v0.TopologyChangeOp operation = 1;
    // unique id of this element
    string id = 2;
    // the element of this topology transaction
    oneof mapping {
        v0.NamespaceDelegation namespace_delegation = 3;
        v0.IdentifierDelegation identifier_delegation = 4;
        v0.OwnerToKeyMapping owner_to_key_mapping = 5;
        v0.PartyToParticipant party_to_participant = 6;
        v0.SignedLegalIdentityClaim signed_legal_identity_claim = 7;
        v0.ParticipantState participant_state = 8;
        v0.VettedPackages vetted_packages = 9;
        v0.MediatorDomainState mediator_domain_state = 10;
    }
}

message DomainGovernanceTransaction {
    // the element of this topology transaction
    oneof mapping {
        v0.DomainParametersChange domain_parameters_change = 1;
    }
}

message TopologyTransaction {
    oneof transaction {
        TopologyStateUpdate state_update = 1;
        DomainGovernanceTransaction domain_governance = 2;
    }
}
